--- a/Praticando01.html
+++ b/Praticando01.html
@@ -2,13 +2,22 @@
         <em></em>   e    <strong></strong>
 -->
 <html>
+    <p>
 <title>Enfase e Importancia</title>
 <h1>
     Usando <em> em </em> Para dar Enfase ao texto.
 </h1>
+</p>
 
+<p>
 <h3>
-    Usando <strong> Strong </strong> Para dar Importanciaao texto.
+    Usando <strong> Strong </strong> Para dar Importancia ao texto.
 </h3>
+</p>
+
+<p>
+    <a href ="https:www.google.com">Mais Informações</a>
+</p>
+
 
 </html>
